--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!-- Automatically created by ../biovista-lib/scripts/update-build-xml.sh. Do not edit -->
 <project basedir="." default="build" name="bv-gwt-tour">
-	<property name="src_dir" value="./gwt-tour/src/main/java"/>
+	<property name="src_dir" value="./gwt-tour/ahome-tour/src/main/java"/>
 	<property name="build_dir" value="build"/>
 	<property name="excluded" value=" ${excludes}"/>
 	<import file="../biovista-lib/build-lib.xml" />
@@ -13,7 +13,7 @@
 	</path>
 
 	<path id="bv-gwt-tour.srcpath">
-		<pathelement location="./gwt-tour/src/main/java"/>
+		<pathelement location="./gwt-tour/ahome-tour/src/main/java"/>
 	</path>
 
 	<target name="cleanall" description="cleans all dependendant projects" depends="clean">
